--- a/index.html
+++ b/index.html
@@ -7,12 +7,33 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Instrucciones</h1>
-
-    <ol>
-      <li>Enchufar correctamente</li>
-      <li>Comprobar conexiones</li>
-      <li>Encender el aparato</li>
-    </ol>
+    <ol start="5">
+        <li>Julio</li>
+        <li>Carmen</li>
+        <li>Ignacio</li>
+        <li>Elena</li>
+      </ol>
+      <ul>
+        <li>Carnívoro
+            <ul>
+                <li>León</li>
+                <li>Buitre</li>
+                <li>Hiena</li>
+            </ul>
+        </li>
+        <li>Herbívoro
+            <ul>
+                <li>Cabra</li>
+                <li>Vaca</li>
+            </ul>
+        </li>
+        <li>Omnívoro
+            <ul>
+                <li>Oso</li>
+                <li>Urraca</li>
+            </ul>
+        </li>
+      </ul>
+      
 </body>
 </html>
